Refatorando classes